--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@apollo/client": "^3.7.7",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@popperjs/core": "^2.9.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-icons": "^1.2.0",
     "chart.js": "^2.9.4",
     "gulp": "^3.9.1",
     "gulp-append-prepend": "^1.0.9",
