--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@popperjs/core": "^2.9.1",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-icons": "^1.2.0",
-    "chart.js": "^2.9.4",
+    "@radix-ui/react-select": "^1.2.1",
+    "antd": "^5.4.6",
+    "chart.js": "^4.1.1",
     "gulp": "^3.9.1",
     "gulp-append-prepend": "^1.0.9",
     "next": "^13.1.6",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
-    "react-google-charts": "^4.0.0"
+    "react-google-charts": "^4.0.0",
+    "react-chartjs-2": "^3.1.1",
+    "lodash.debounce": "^4.0.8"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
@@ -31,7 +35,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.3.2",
     "typescript": "4.9.4"
   }
 }
