--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-google-charts": "^4.0.0",
     "react-chartjs-2": "^3.1.1",
+    "prismjs": "^1.29.0",
     "lodash.debounce": "^4.0.8"
   },
   "devDependencies": {
