--- a/package.json
+++ b/package.json
@@ -17,18 +17,21 @@
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-select": "^1.2.1",
+    "@react-pdf/renderer": "^3.1.12",
     "antd": "^5.4.6",
     "chart.js": "^4.1.1",
     "gulp": "^3.9.1",
     "gulp-append-prepend": "^1.0.9",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "lodash.debounce": "^4.0.8",
     "next": "^13.1.6",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "18.2.0",
-    "react-google-charts": "^4.0.0",
     "react-chartjs-2": "^3.1.1",
-    "prismjs": "^1.29.0",
-    "lodash.debounce": "^4.0.8"
+    "react-dom": "18.2.0",
+    "react-google-charts": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
