--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-select": "^1.2.1",
-    "antd": "^5.4.6",
+    "antd": "^5.13.1",
+    "@ant-design/icons": "^5.2.6",
     "chart.js": "^4.1.1",
     "gulp": "^3.9.1",
     "gulp-append-prepend": "^1.0.9",
