--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "18.11.3",
-    "@types/react": "18.0.21",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
