--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/lodash": "^4.14.202",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "18.11.3",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.48",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.13",
